clusters/k3s-homelab/monitoring/loki/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-ingress-tls
  namespace: monitoring
  labels:
    app: loki
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match: Host(`loki.app.homelab.me`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: loki
      port: 3100
  - match: Host(`loki-gateway.app.homelab.me`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: loki-gateway
      port: 80
  # tls:
    secretName: monitoring-tls
